--- a/feladat.html
+++ b/feladat.html
@@ -223,3 +223,383 @@ Hungary_TocoskertsArrows3, not updated, 0.0<br />
 Hungary_60Color kihagyva (100%), <br />
 Hungary_Cata-Joy kihagyva (100%), <br />
 Hungary_FlatDebrecen, <b>updated</b>, 249, <a href="https://www.munzee.com/map/u2rqk56jy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_FlatDebrecen.json" target="_blank">json</a><br />
+Hungary_Debrecen2202, not updated, 0.0<br />
+Hungary_EvolutionDebrecen kihagyva (100%), <br />
+Hungary_JewelSandwich, not updated, 0.0<br />
+Hungary_Cimbi kihagyva (100%), <br />
+Hungary_Picu kihagyva (100%), <br />
+Hungary_Honey kihagyva (100%), <br />
+Hungary_QR kihagyva (100%), <br />
+Hungary_DebreceniKereszt kihagyva (100%), <br />
+Hungary_60Flat kihagyva (100%), <br />
+UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
+UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
+UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
+UnitedKingdom_HeathrowFlatSquares, not updated, 0.519999999999996<br />
+UnitedKingdom_LondonUnderground, not updated, 0.0<br />
+UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
+UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
+UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
+UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
+UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
+UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
+UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
+UnitedKingdom_ShadesGarden kihagyva (100%), <br />
+UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
+UnitedKingdom_SailingBoat kihagyva (100%), <br />
+UnitedKingdom_HendonCircle kihagyva (100%), <br />
+Australia_9thBirthdayInQueensland kihagyva (100%), <br />
+Australia_MayPole kihagyva (100%), <br />
+Australia_PyramidOBadges kihagyva (100%), <br />
+Australia_QLD-Dingo kihagyva (100%), <br />
+Australia_HappyTenMunzee kihagyva (100%), <br />
+Australia_QLDPerm-Temp, not updated, -42.0<br />
+Australia_UnicornInThePark kihagyva (100%), <br />
+Germany_Berlin-HighVoltage kihagyva (100%), <br />
+Germany_ColoursOfBerlin kihagyva (100%), <br />
+Germany_9thBirthdayInBerlin kihagyva (100%), <br />
+Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
+Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
+Hungary_Debrecen kihagyva (100%), <br />
+Hungary_DeoCachingClan kihagyva (100%), <br />
+Hungary_TocoskertsArrows kihagyva (100%), <br />
+UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
+UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
+Canada_OttawaCancerRibbon kihagyva (100%), <br />
+Canada_OttawaGoldfish kihagyva (100%), <br />
+Canada_BananaBread kihagyva (100%), <br />
+Canada_Elephriends kihagyva (100%), <br />
+Canada_LizzysUnicorn kihagyva (100%), <br />
+Canada_JeffsFarm kihagyva (100%), <br />
+UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
+Germany_JohnTheFab41 kihagyva (100%), <br />
+Germany_RingoTheFab4, not updated, 0.0<br />
+Germany_GeorgeTheFab42, not updated, 1.0<br />
+Germany_PaulTheFab43, not updated, 0.9299999999999926<br />
+Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
+Hungary_MaXGarden kihagyva (100%), <br />
+Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
+Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
+Hungary_SZTE, not updated, -38.43<br />
+Hungary_MarioInVac, not updated, 0.0<br />
+Hungary_LovagokKertje kihagyva (100%), <br />
+Hungary_ShieldKecskemet, not updated, 0.0<br />
+Hungary_Mini kihagyva (100%), <br />
+Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
+Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
+Hungary_EyesInTheNight kihagyva (100%), <br />
+Hungary_PomazLocomotiv kihagyva (100%), <br />
+Slovakia_Bratislava kihagyva (100%), <br />
+Slovakia_ChilliKiller, not updated, 0.0<br />
+Slovakia_LakeLighthousePainting, not updated, 0.0<br />
+Slovakia_ChargeBratislava kihagyva (100%), <br />
+Slovakia_VirtualJoy kihagyva (100%), <br />
+Slovakia_ElectricLetters kihagyva (100%), <br />
+Slovakia_DevinCastle kihagyva (100%), <br />
+Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
+Slovakia_1stDayEvo kihagyva (100%), <br />
+Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
+Slovakia_AgentSun kihagyva (100%), <br />
+Slovakia_CandleTombstone kihagyva (100%), <br />
+Canada_SecretLantern kihagyva (100%), <br />
+Canada_OttawaCross kihagyva (100%), <br />
+Canada_MysteryBoat kihagyva (100%), <br />
+Canada_SaveTheMonarchs kihagyva (100%), <br />
+Canada_FlutteringByOrleans kihagyva (100%), <br />
+Canada_MunzeeViolin kihagyva (100%), <br />
+Canada_MysteryKeyboard kihagyva (100%), <br />
+Canada_MunzeeDrumSet kihagyva (100%), <br />
+Canada_MunzeeGuitar kihagyva (100%), <br />
+Canada_MunzeeTrumpet kihagyva (100%), <br />
+Canada_OttawaLeprechaun kihagyva (100%), <br />
+Canada_SandcastleFun kihagyva (100%), <br />
+Canada_OttawaTornado kihagyva (100%), <br />
+Canada_MunzeeSnowglobe kihagyva (100%), <br />
+Canada_RainbowStar kihagyva (100%), <br />
+Canada_TheSecretEgg kihagyva (100%), <br />
+Canada_JimmysTractor kihagyva (100%), <br />
+Canada_BeeStrongJeffeth kihagyva (100%), <br />
+Canada_JimmysDog kihagyva (100%), <br />
+Canada_JimmysBoat kihagyva (100%), <br />
+Canada_LizzysKitty kihagyva (100%), <br />
+Canada_RocklandEasterEggs kihagyva (100%), <br />
+Canada_ClairesCake kihagyva (100%), <br />
+Canada_StanleyForDad kihagyva (100%), <br />
+Canada_RocklandTree kihagyva (100%), <br />
+Canada_JimmysRocket kihagyva (100%), <br />
+Canada_BreadInRockland kihagyva (100%), <br />
+Canada_MarchingFlats kihagyva (100%), <br />
+Canada_RocklandHeart kihagyva (100%), <br />
+Canada_LizzysElephant kihagyva (100%), <br />
+Canada_AdventuresInRockland kihagyva (100%), <br />
+Canada_SecretLove kihagyva (100%), <br />
+Canada_LizzysGoldfish kihagyva (100%), <br />
+Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
+Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
+Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
+USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
+USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
+Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
+Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
+Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
+Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
+Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInOspel, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInThringstone, not updated, 0.0<br />
+Australia_StroopwafelInvasionInWonthaggi, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
+Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
+Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
+Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
+Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
+USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
+USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
+Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
+USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
+Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
+USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
+Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
+Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
+Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
+USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
+USA_MHQBash4Casino kihagyva (100%), <br />
+USA_MHQV4Pin kihagyva (100%), <br />
+USA_ZeeKnight, not updated, 0.0<br />
+USA_MichaelMyersHalloween, not updated, 0.0<br />
+USA_MunzeeLogoHistory2011, not updated, 0.0<br />
+USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
+USA_MunzeeLogoHistory2014, not updated, 0.0<br />
+USA_MunzeeLogoHistory2015, not updated, 0.0<br />
+USA_PiratesFlag kihagyva (100%), <br />
+USA_Zelda, not updated, 0.0<br />
+USA_TeenageMutantNinjaTurtles, not updated, 0.0<br />
+Germany_FBombBerlin kihagyva (100%), <br />
+Hungary_FBombBudapest kihagyva (100%), <br />
+USA_FBombCedarRapids kihagyva (100%), <br />
+Denmark_FBombHammel kihagyva (100%), <br />
+USA_FBombMcKinney kihagyva (100%), <br />
+USA_FBombTampa kihagyva (100%), <br />
+USA_RoverPin, not updated, 0.0<br />
+USA_EmeraldInAnchorage kihagyva (100%), <br />
+USA_EmeraldInChesterfield kihagyva (100%), <br />
+USA_EmeraldInMcKinney kihagyva (100%), <br />
+Australia_EmeraldInMelbourne kihagyva (100%), <br />
+UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
+Australia_EmeraldInSydney kihagyva (100%), <br />
+BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
+Serbia_JapanseMaple kihagyva (100%), <br />
+Greece_TheLighthouseOfChania kihagyva (100%), <br />
+Jersey_JerzeeClan, not updated, 0.0<br />
+Jersey_JerseyColorPaw, not updated, 0.0<br />
+Jersey_StOuen kihagyva (100%), <br />
+Portugal_MadeiraMonumental kihagyva (100%), <br />
+Portugal_LargoDaPaz kihagyva (100%), <br />
+Portugal_1MadeiraSapphiresTwin kihagyva (100%), <br />
+Portugal_Portinho kihagyva (100%), <br />
+Croatia_CroatiaLocketHeart, not updated, 0.0<br />
+Greece_Zakynthos, not updated, 0.0<br />
+Portugal_PortoNovoHighVoltage, not updated, 0.0<br />
+Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
+Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
+UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
+France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
+Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
+USA_MOAChristmasCard kihagyva (100%), <br />
+Germany_AreYouXZeePerienced, not updated, 0.0<br />
+Germany_MixedGardenRT kihagyva (100%), <br />
+Germany_AppenzellerSennenhundRT, not updated, 0.1700000000000017<br />
+Germany_PatchworkRT, not updated, 0.259999999999998<br />
+Germany_FlatsAppenzellerRT, not updated, 0.269999999999996<br />
+Germany_WeddingDay kihagyva (100%), <br />
+Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
+Germany_SportparkEvolutionsRT2, not updated, -0.8800000000000097<br />
+Germany_Peace, not updated, 0.0<br />
+Germany_PatchworkDusslingen, not updated, 0.0<br />
+USA_MunzeeMania2019, not updated, 0.0<br />
+USA_MOADwarfLeprechaun kihagyva (100%), <br />
+USA_MOAPenguin kihagyva (100%), <br />
+USA_MOANutcracker kihagyva (100%), <br />
+USA_IceCreamEagan kihagyva (100%), <br />
+Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
+USA_SuperChuckerShield kihagyva (100%), <br />
+USA_DogDaysOfSummer kihagyva (100%), <br />
+USA_GingerbreadMan_Edina kihagyva (100%), <br />
+USA_NEOneAlien, not updated, 0.9100000000000108<br />
+USA_ComoEvoFlowers kihagyva (100%), <br />
+USA_WitchHat, not updated, 0.0<br />
+USA_LRTEVOTrain, not updated, 0.0<br />
+USA_JackOZEEacula kihagyva (100%), <br />
+USA_Minnesota kihagyva (100%), <br />
+USA_MinnesotaMoose kihagyva (100%), <br />
+USA_ChristmasSnowman kihagyva (100%), <br />
+USA_MOAYeti kihagyva (100%), <br />
+USA_MOAFlower kihagyva (100%), <br />
+USA_MOAElectricMonster kihagyva (100%), <br />
+Lithuania_VirusBomb, not updated, 0.0<br />
+Lithuania_KaisiadorysHammer kihagyva (100%), <br />
+Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
+Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
+Lithuania_BalticWay30 kihagyva (100%), <br />
+Austria_FrauenkirchenOwl, not updated, 0.0<br />
+Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
+Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
+Lithuania_KaunasScatter1 kihagyva (100%), <br />
+Lithuania_KaunasScatter2, not updated, 0.0<br />
+Lithuania_KaunasLightning, not updated, 0.0<br />
+Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
+Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
+Lithuania_KaunasMagnet, not updated, 0.0<br />
+Lithuania_FebruaryEvent, not updated, 0.0<br />
+USA_TheLuckyFungi kihagyva (100%), <br />
+USA_SunAndMoon, not updated, 0.0<br />
+USA_LexingtonSurprise, not updated, 0.0<br />
+Australia_BrisbaneHeartPopUp kihagyva (100%), <br />
+Australia_QldJacaranda kihagyva (100%), <br />
+Australia_FairyWren kihagyva (100%), <br />
+Germany_BerlinCardsPin kihagyva (100%), <br />
+Germany_Pretzel kihagyva (100%), <br />
+Germany_AdventurePortal2, not updated, 0.0<br />
+Germany_BerlinVoidMapleChess, not updated, 0.0<br />
+Germany_SweetHeart kihagyva (100%), <br />
+Germany_WittenauerMischMasch, not updated, 0.0<br />
+Germany_BerlinBYOG2020 kihagyva (100%), <br />
+Germany_MarzahnerBockwindmuhle kihagyva (100%), <br />
+Germany_GermanHeart kihagyva (100%), <br />
+Australia_RUMportal kihagyva (100%), <br />
+Australia_MiniPortal1 kihagyva (100%), <br />
+Denmark_MiniPortal2 kihagyva (100%), <br />
+Germany_MattPin kihagyva (100%), <br />
+Germany_CrossbowShield kihagyva (100%), <br />
+Germany_FlatLouPin kihagyva (100%), <br />
+Germany_FlatHammockPin kihagyva (100%), <br />
+Germany_FlatRobPin kihagyva (100%), <br />
+Germany_CrossbowPin kihagyva (100%), <br />
+Germany_MysteryPin kihagyva (100%), <br />
+Germany_GreeniePin kihagyva (100%), <br />
+Germany_SperenbergTeddy kihagyva (100%), <br />
+Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
+Germany_ErnieInVolksdorf, not updated, 0.0<br />
+Germany_Quietscheentchen kihagyva (100%), <br />
+Germany_Hammaburg, not updated, 0.0<br />
+Germany_FCStPauli, not updated, 0.0<br />
+Germany_YinYangNeustadt, not updated, 0.0<br />
+Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
+Denmark_SoparkenMaribo kihagyva (100%), <br />
+Denmark_NonneMaribo kihagyva (100%), <br />
+Denmark_ZeecretSundby kihagyva (100%), <br />
+Denmark_FjerNykobing, not updated, 0.08999999999999986<br />
+Denmark_SpejdernesLejr2022, not updated, 0.0<br />
+Denmark_JuletraeIViby kihagyva (100%), <br />
+Denmark_ZeecretViby kihagyva (100%), <br />
+Denmark_NVGogglesSoro kihagyva (100%), <br />
+Denmark_ZeecretFrederiksberg kihagyva (100%), <br />
+Denmark_DetSpogerIHaslev kihagyva (100%), <br />
+Denmark_ZeecretFensmark kihagyva (100%), <br />
+Denmark_FlatFensmark kihagyva (100%), <br />
+Denmark_ZeecretAppenaes kihagyva (100%), <br />
+Denmark_ZeecretHilleroed kihagyva (100%), <br />
+Denmark_FlatSquare kihagyva (100%), <br />
+USA_HotelEvo kihagyva (100%), <br />
+USA_Emoji, not updated, 0.0<br />
+USA_ElectricJHawk, not updated, 0.0<br />
+USA_DesMoinesGreetingCards, not updated, 0.0<br />
+USA_KCNightLights1 kihagyva (100%), <br />
+USA_KCNightLights2 kihagyva (100%), <br />
+USA_KCNightLights3 kihagyva (100%), <br />
+USA_KCNightLights4 kihagyva (100%), <br />
+USA_KCNightLights5 kihagyva (100%), <br />
+USA_KansasCityPanda, not updated, 0.0<br />
+USA_ResearchHospital kihagyva (100%), <br />
+USA_KCAmericanFlag kihagyva (100%), <br />
+USA_KauffmanLegacyParkQuilt kihagyva (100%), <br />
+USA_KCEgyptianZodiacExpanded kihagyva (100%), <br />
+USA_Marion kihagyva (100%), <br />
+USA_Dragonfly, not updated, 0.0<br />
+USA_ElectricalEvolution, not updated, 0.0<br />
+USA_CFPumpkin, not updated, 0.0<br />
+USA_Marion4LeafClover kihagyva (100%), <br />
+USA_Popcorn, not updated, 0.0<br />
+USA_UnofficialCREvo, not updated, 0.0<br />
+USA_CRElectricMystery kihagyva (100%), <br />
+USA_CRHolidayPizza kihagyva (100%), <br />
+USA_CRRose kihagyva (100%), <br />
+USA_CRHonorCross kihagyva (100%), <br />
+USA_WatertownShammy kihagyva (100%), <br />
+USA_CatapultPit kihagyva (100%), <br />
+USA_Crossbow, not updated, 0.0<br />
+USA_BowlingBash kihagyva (100%), <br />
+USA_AtlanticDuck, not updated, 0.0<br />
+USA_80sCube kihagyva (100%), <br />
+USA_CRSubmarine kihagyva (100%), <br />
+USA_IowaVeteransCemetery, not updated, 0.0<br />
+USA_SchildbergsDuckWalk kihagyva (100%), <br />
+USA_CRVegetable kihagyva (100%), <br />
+USA_CedarRapidsBarnyard kihagyva (100%), <br />
+UnitedKingdom_JanuaryGarden2022 kihagyva (100%), <br />
+USA_CRFarmersField kihagyva (100%), <br />
+USA_CRMuscleCar kihagyva (100%), <br />
+USA_JacobLLoosePark kihagyva (100%), <br />
+USA_CRSafari kihagyva (100%), <br />
+USA_CRApril kihagyva (100%), <br />
+USA_PicassoRob kihagyva (100%), <br />
+USA_CRFlatMattLovesBaseball kihagyva (100%), <br />
+USA_FlatRobBirthday kihagyva (100%), <br />
+USA_WestDesMoinesPacMan, not updated, 0.0<br />
+USA_CRFeather kihagyva (100%), <br />
+USA_BlackCat kihagyva (100%), <br />
+USA_CRJonesParkBirthday7 kihagyva (100%), <br />
+USA_NoelridgeMystery kihagyva (100%), <br />
+USA_WestDesMoinesStrawberry, not updated, 0.0<br />
+USA_WestDesMoinesShark, not updated, 0.0<br />
+USA_AltoonaEvos, not updated, 0.0<br />
+USA_DSMHalloweenWitch, not updated, 0.0<br />
+USA_CRFrankenstein, not updated, 0.0<br />
+USA_ThomasParkFlats kihagyva (100%), <br />
+USA_IowaGoldfinch kihagyva (100%), <br />
+USA_Minion kihagyva (100%), <br />
+USA_FarmingtonTiger, not updated, 0.0<br />
+USA_CedarRapidsPumpkin kihagyva (100%), <br />
+USA_PuppyPlayPen, not updated, 0.0<br />
+USA_Burger kihagyva (100%), <br />
+USA_Pizza kihagyva (100%), <br />
+USA_StormtrooperSavage kihagyva (100%), <br />
+USA_Snoopy kihagyva (100%), <br />
+USA_JordanJ kihagyva (100%), <br />
+USA_Tulip kihagyva (100%), <br />
+USA_MOAMNCrossbow kihagyva (100%), <br />
+USA_MinnesotaM kihagyva (100%), <br />
+USA_HiawathaCrossbows kihagyva (100%), <br />
+USA_SuperBowlLII kihagyva (100%), <br />
+USA_EaglesVPatriots kihagyva (100%), <br />
+USA_StMarysBattlegroundWeapon kihagyva (100%), <br />
+USA_LRTSnowflake kihagyva (100%), <br />
+USA_HeartCrossbows kihagyva (100%), <br />
+USA_ComoParkShamrockWhite kihagyva (100%), <br />
+USA_ComoParkShamrockBlue, not updated, 0.0<br />
+USA_StPaulShamrock kihagyva (100%), <br />
+USA_BirthdayClown kihagyva (100%), <br />
+USA_LongLakeButterflies kihagyva (100%), <br />
+USA_FleurDeLis, not updated, 0.0<br />
+USA_HutchinsonSnowflake kihagyva (100%), <br />
+USA_RochestersCornWaterTower, not updated, 0.0<br />
+USA_DuluthAnchor kihagyva (100%), <br />
+USA_SunFlake, not updated, 0.0<br />
+USA_PrescottCardinals, not updated, 0.0<br />
+Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+Hungary_city_Debrecen, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqs2c96/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Debrecen.json" target="_blank">json</a><br />
+Hungary_city_Tatabanya, <b>updated</b>, <a href="https://www.munzee.com/map/u2mndxhne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Tatabanya.json" target="_blank">json</a><br />
+----felhasználók<br />
+Norbee97_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw30kw9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_all.json" target="_blank">json</a><br />
+Norbee97_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2rq7fsvq/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_empty.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.01.19 01:40:21<br />
+összesen 1812<br />
