--- a/feladat.html
+++ b/feladat.html
@@ -47,3 +47,22 @@ USA_Turtle, not updated, 0.0<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
 Lithuania_KaunasBasketball, <b>updated</b>, 463, <a href="https://www.munzee.com/map/u9c020cgg/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasBasketball.json" target="_blank">json</a><br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 1.0<br />
+Belgium_KnokkeHeist, not updated, 0.5<br />
+Hungary_Evolution, not updated, 0.8333333333333286<br />
+Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.6999999999999886<br />
+Hungary_TaskasSmiley, not updated, 0.33112582781457434<br />
+Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
+Slovakia_FlagOfSlovakia, not updated, 0.18999999999999773<br />
+Hungary_SurpriseAirline, not updated, 0.0<br />
+Hungary_RubiksCube, not updated, 0.0<br />
+Hungary_GyulaCastle, not updated, 0.0<br />
+USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
+USA_FortMyersAlligator, not updated, 0.0<br />
+Denmark_TheSwanInHilleroed, not updated, 0.0<br />
+Hungary_CsepelObol, not updated, 0.0<br />
+Hungary_CsepelVasEsFemmuvekLogo, <b>updated</b>, 599, <a href="https://www.munzee.com/map/u2mtcd7c8/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_CsepelVasEsFemmuvekLogo.json" target="_blank">json</a><br />
