--- a/feladat.html
+++ b/feladat.html
@@ -280,3 +280,60 @@ Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla, <b>updated</b>, 94, <a href="https://www.munzee.com/map/u2mn7yzxz/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_StroopwafelInvasionInFelsogalla.json" target="_blank">json</a><br />
+Hungary_SZTE, not updated, -38.43<br />
+Hungary_MarioInVac, not updated, 0.0<br />
+Hungary_LovagokKertje kihagyva (100%), <br />
+Hungary_ShieldKecskemet, not updated, 0.0<br />
+Hungary_Mini kihagyva (100%), <br />
+Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
+Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
+Hungary_EyesInTheNight kihagyva (100%), <br />
+Hungary_PomazLocomotiv kihagyva (100%), <br />
+Slovakia_Bratislava kihagyva (100%), <br />
+Slovakia_ChilliKiller, not updated, 0.0<br />
+Slovakia_LakeLighthousePainting, not updated, 0.0<br />
+Slovakia_ChargeBratislava kihagyva (100%), <br />
+Slovakia_VirtualJoy kihagyva (100%), <br />
+Slovakia_ElectricLetters kihagyva (100%), <br />
+Slovakia_DevinCastle kihagyva (100%), <br />
+Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
+Slovakia_1stDayEvo kihagyva (100%), <br />
+Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
+Slovakia_AgentSun kihagyva (100%), <br />
+Slovakia_CandleTombstone kihagyva (100%), <br />
+Canada_SecretLantern kihagyva (100%), <br />
+Canada_OttawaCross kihagyva (100%), <br />
+Canada_MysteryBoat kihagyva (100%), <br />
+Canada_SaveTheMonarchs kihagyva (100%), <br />
+Canada_FlutteringByOrleans kihagyva (100%), <br />
+Canada_MunzeeViolin kihagyva (100%), <br />
+Canada_MysteryKeyboard kihagyva (100%), <br />
+Canada_MunzeeDrumSet kihagyva (100%), <br />
+Canada_MunzeeGuitar kihagyva (100%), <br />
+Canada_MunzeeTrumpet kihagyva (100%), <br />
+Canada_OttawaLeprechaun kihagyva (100%), <br />
+Canada_SandcastleFun kihagyva (100%), <br />
+Canada_OttawaTornado kihagyva (100%), <br />
+Canada_MunzeeSnowglobe kihagyva (100%), <br />
+Canada_RainbowStar kihagyva (100%), <br />
+Canada_TheSecretEgg kihagyva (100%), <br />
+Canada_JimmysTractor kihagyva (100%), <br />
+Canada_BeeStrongJeffeth kihagyva (100%), <br />
+Canada_JimmysDog kihagyva (100%), <br />
+Canada_JimmysBoat kihagyva (100%), <br />
+Canada_LizzysKitty kihagyva (100%), <br />
+Canada_RocklandEasterEggs kihagyva (100%), <br />
+Canada_ClairesCake kihagyva (100%), <br />
+Canada_StanleyForDad kihagyva (100%), <br />
+Canada_RocklandTree kihagyva (100%), <br />
+Canada_JimmysRocket kihagyva (100%), <br />
+Canada_BreadInRockland kihagyva (100%), <br />
+Canada_MarchingFlats kihagyva (100%), <br />
+Canada_RocklandHeart kihagyva (100%), <br />
+Canada_LizzysElephant kihagyva (100%), <br />
+Canada_AdventuresInRockland kihagyva (100%), <br />
+Canada_SecretLove kihagyva (100%), <br />
+Canada_LizzysGoldfish kihagyva (100%), <br />
+Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
+Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInAndover, <b>updated</b>, 58, <a href="https://www.munzee.com/map/gcngq3xm7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInAndover.json" target="_blank">json</a><br />
