--- a/feladat.html
+++ b/feladat.html
@@ -340,3 +340,4 @@ UnitedKingdom_StroopwafelInvasionInAndover, <b>updated</b>, 58, <a href="https:/
 Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
 USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 67, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
 USA_StroopwafelInvasionInHagerstown, <b>updated</b>, 59, <a href="https://www.munzee.com/map/dr09wfndy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInHagerstown.json" target="_blank">json</a><br />
+Australia_StroopwafelInvasionInKelmscott, <b>updated</b>, 57, <a href="https://www.munzee.com/map/qd63rd421/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInKelmscott.json" target="_blank">json</a><br />
