--- a/feladat.html
+++ b/feladat.html
@@ -341,3 +341,256 @@ Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
 USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 67, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
 USA_StroopwafelInvasionInHagerstown, <b>updated</b>, 59, <a href="https://www.munzee.com/map/dr09wfndy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInHagerstown.json" target="_blank">json</a><br />
 Australia_StroopwafelInvasionInKelmscott, <b>updated</b>, 57, <a href="https://www.munzee.com/map/qd63rd421/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInKelmscott.json" target="_blank">json</a><br />
+UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
+Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
+Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
+Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
+Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInOspel, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInThringstone, not updated, 0.0<br />
+Australia_StroopwafelInvasionInWonthaggi, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
+Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
+Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
+Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
+Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
+USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
+USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
+Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
+USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
+Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
+USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
+Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
+Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
+Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
+USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
+USA_MHQBash4Casino kihagyva (100%), <br />
+USA_MHQV4Pin kihagyva (100%), <br />
+USA_ZeeKnight, not updated, 0.0<br />
+USA_MichaelMyersHalloween, not updated, 0.0<br />
+USA_MunzeeLogoHistory2011, not updated, 0.0<br />
+USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
+USA_MunzeeLogoHistory2014, not updated, 0.0<br />
+USA_MunzeeLogoHistory2015, not updated, 0.0<br />
+USA_PiratesFlag kihagyva (100%), <br />
+USA_Zelda, not updated, 0.0<br />
+USA_TeenageMutantNinjaTurtles, not updated, 0.0<br />
+Germany_FBombBerlin kihagyva (100%), <br />
+Hungary_FBombBudapest kihagyva (100%), <br />
+USA_FBombCedarRapids kihagyva (100%), <br />
+Denmark_FBombHammel kihagyva (100%), <br />
+USA_FBombMcKinney kihagyva (100%), <br />
+USA_FBombTampa kihagyva (100%), <br />
+USA_RoverPin, not updated, 0.0<br />
+USA_EmeraldInAnchorage kihagyva (100%), <br />
+USA_EmeraldInChesterfield kihagyva (100%), <br />
+USA_EmeraldInMcKinney kihagyva (100%), <br />
+Australia_EmeraldInMelbourne kihagyva (100%), <br />
+UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
+Australia_EmeraldInSydney kihagyva (100%), <br />
+BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
+Serbia_JapanseMaple kihagyva (100%), <br />
+Greece_TheLighthouseOfChania kihagyva (100%), <br />
+Jersey_JerzeeClan, not updated, 0.0<br />
+Jersey_JerseyColorPaw, not updated, 0.0<br />
+Jersey_StOuen kihagyva (100%), <br />
+Portugal_MadeiraMonumental kihagyva (100%), <br />
+Portugal_LargoDaPaz kihagyva (100%), <br />
+Portugal_1MadeiraSapphiresTwin kihagyva (100%), <br />
+Portugal_Portinho kihagyva (100%), <br />
+Croatia_CroatiaLocketHeart, not updated, 0.0<br />
+Greece_Zakynthos, not updated, 0.0<br />
+Portugal_PortoNovoHighVoltage, not updated, 0.0<br />
+Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
+Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
+UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
+France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
+Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
+USA_MOAChristmasCard kihagyva (100%), <br />
+Germany_AreYouXZeePerienced, not updated, 0.0<br />
+Germany_MixedGardenRT kihagyva (100%), <br />
+Germany_AppenzellerSennenhundRT, not updated, 0.1700000000000017<br />
+Germany_PatchworkRT, not updated, 0.3200000000000003<br />
+Germany_FlatsAppenzellerRT, not updated, 0.4399999999999977<br />
+Germany_WeddingDay kihagyva (100%), <br />
+Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
+Germany_SportparkEvolutionsRT2, not updated, -0.8800000000000097<br />
+Germany_Peace, not updated, 0.0<br />
+Germany_PatchworkDusslingen, not updated, 0.0<br />
+USA_MunzeeMania2019, not updated, 0.0<br />
+USA_MOADwarfLeprechaun kihagyva (100%), <br />
+USA_MOAPenguin kihagyva (100%), <br />
+USA_MOANutcracker kihagyva (100%), <br />
+USA_IceCreamEagan kihagyva (100%), <br />
+Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
+USA_SuperChuckerShield kihagyva (100%), <br />
+USA_DogDaysOfSummer kihagyva (100%), <br />
+USA_GingerbreadMan_Edina kihagyva (100%), <br />
+USA_NEOneAlien, not updated, 0.9100000000000108<br />
+USA_ComoEvoFlowers kihagyva (100%), <br />
+USA_WitchHat, not updated, 0.0<br />
+USA_LRTEVOTrain, not updated, 0.0<br />
+USA_JackOZEEacula kihagyva (100%), <br />
+USA_Minnesota kihagyva (100%), <br />
+USA_MinnesotaMoose kihagyva (100%), <br />
+USA_ChristmasSnowman kihagyva (100%), <br />
+USA_MOAYeti kihagyva (100%), <br />
+USA_MOAFlower kihagyva (100%), <br />
+USA_MOAElectricMonster kihagyva (100%), <br />
+Lithuania_VirusBomb, not updated, 0.0<br />
+Lithuania_KaisiadorysHammer kihagyva (100%), <br />
+Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
+Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
+Lithuania_BalticWay30 kihagyva (100%), <br />
+Austria_FrauenkirchenOwl, not updated, 0.0<br />
+Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
+Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
+Lithuania_KaunasScatter1 kihagyva (100%), <br />
+Lithuania_KaunasScatter2, not updated, 0.0<br />
+Lithuania_KaunasLightning, not updated, 0.0<br />
+Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
+Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
+Lithuania_KaunasMagnet, not updated, 0.0<br />
+Lithuania_FebruaryEvent, not updated, 0.0<br />
+USA_TheLuckyFungi kihagyva (100%), <br />
+USA_SunAndMoon, not updated, 0.0<br />
+USA_LexingtonSurprise, not updated, 0.0<br />
+Australia_BrisbaneHeartPopUp kihagyva (100%), <br />
+Australia_QldJacaranda kihagyva (100%), <br />
+Australia_FairyWren kihagyva (100%), <br />
+Germany_BerlinCardsPin kihagyva (100%), <br />
+Germany_Pretzel kihagyva (100%), <br />
+Germany_AdventurePortal2, not updated, 0.0<br />
+Germany_BerlinVoidMapleChess, not updated, 0.0<br />
+Germany_SweetHeart kihagyva (100%), <br />
+Germany_WittenauerMischMasch, not updated, 0.0<br />
+Germany_BerlinBYOG2020 kihagyva (100%), <br />
+Germany_MarzahnerBockwindmuhle kihagyva (100%), <br />
+Germany_GermanHeart kihagyva (100%), <br />
+Australia_RUMportal kihagyva (100%), <br />
+Australia_MiniPortal1 kihagyva (100%), <br />
+Denmark_MiniPortal2 kihagyva (100%), <br />
+Germany_MattPin kihagyva (100%), <br />
+Germany_CrossbowShield kihagyva (100%), <br />
+Germany_FlatLouPin kihagyva (100%), <br />
+Germany_FlatHammockPin kihagyva (100%), <br />
+Germany_FlatRobPin kihagyva (100%), <br />
+Germany_CrossbowPin kihagyva (100%), <br />
+Germany_MysteryPin kihagyva (100%), <br />
+Germany_GreeniePin kihagyva (100%), <br />
+Germany_SperenbergTeddy kihagyva (100%), <br />
+Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
+Germany_ErnieInVolksdorf, not updated, 0.0<br />
+Germany_Quietscheentchen kihagyva (100%), <br />
+Germany_Hammaburg, not updated, 0.0<br />
+Germany_FCStPauli, not updated, 0.0<br />
+Germany_YinYangNeustadt, not updated, 0.0<br />
+Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
+Denmark_SoparkenMaribo kihagyva (100%), <br />
+Denmark_NonneMaribo kihagyva (100%), <br />
+Denmark_ZeecretSundby kihagyva (100%), <br />
+Denmark_FjerNykobing, not updated, 0.10999999999999943<br />
+Denmark_SpejdernesLejr2022, not updated, 0.0<br />
+Denmark_JuletraeIViby kihagyva (100%), <br />
+Denmark_ZeecretViby kihagyva (100%), <br />
+Denmark_NVGogglesSoro kihagyva (100%), <br />
+Denmark_ZeecretFrederiksberg kihagyva (100%), <br />
+Denmark_DetSpogerIHaslev kihagyva (100%), <br />
+Denmark_ZeecretFensmark kihagyva (100%), <br />
+Denmark_FlatFensmark kihagyva (100%), <br />
+Denmark_ZeecretAppenaes kihagyva (100%), <br />
+Denmark_ZeecretHilleroed kihagyva (100%), <br />
+Denmark_FlatSquare kihagyva (100%), <br />
+USA_HotelEvo kihagyva (100%), <br />
+USA_Emoji, not updated, 0.0<br />
+USA_ElectricJHawk, not updated, 0.0<br />
+USA_DesMoinesGreetingCards, not updated, 0.0<br />
+USA_KCNightLights1 kihagyva (100%), <br />
+USA_KCNightLights2 kihagyva (100%), <br />
+USA_KCNightLights3 kihagyva (100%), <br />
+USA_KCNightLights4 kihagyva (100%), <br />
+USA_KCNightLights5 kihagyva (100%), <br />
+USA_KansasCityPanda, not updated, 0.0<br />
+USA_ResearchHospital kihagyva (100%), <br />
+USA_KCAmericanFlag kihagyva (100%), <br />
+USA_KauffmanLegacyParkQuilt kihagyva (100%), <br />
+USA_KCEgyptianZodiacExpanded kihagyva (100%), <br />
+USA_Marion kihagyva (100%), <br />
+USA_Dragonfly, not updated, 0.0<br />
+USA_ElectricalEvolution, not updated, 0.0<br />
+USA_CFPumpkin, not updated, 0.0<br />
+USA_Marion4LeafClover kihagyva (100%), <br />
+USA_Popcorn, not updated, 0.0<br />
+USA_UnofficialCREvo, not updated, 0.0<br />
+USA_CRElectricMystery kihagyva (100%), <br />
+USA_CRHolidayPizza kihagyva (100%), <br />
+USA_CRRose kihagyva (100%), <br />
+USA_CRHonorCross kihagyva (100%), <br />
+USA_WatertownShammy kihagyva (100%), <br />
+USA_CatapultPit kihagyva (100%), <br />
+USA_Crossbow, not updated, 0.0<br />
+USA_BowlingBash kihagyva (100%), <br />
+USA_AtlanticDuck, not updated, 0.0<br />
+USA_80sCube kihagyva (100%), <br />
+USA_CRSubmarine kihagyva (100%), <br />
+USA_IowaVeteransCemetery, not updated, 0.0<br />
+USA_SchildbergsDuckWalk kihagyva (100%), <br />
+USA_CRVegetable kihagyva (100%), <br />
+USA_CedarRapidsBarnyard kihagyva (100%), <br />
+UnitedKingdom_JanuaryGarden2022 kihagyva (100%), <br />
+USA_CRFarmersField kihagyva (100%), <br />
+USA_CRMuscleCar kihagyva (100%), <br />
+USA_JacobLLoosePark kihagyva (100%), <br />
+USA_CRSafari kihagyva (100%), <br />
+USA_CRApril kihagyva (100%), <br />
+USA_PicassoRob kihagyva (100%), <br />
+USA_CRFlatMattLovesBaseball kihagyva (100%), <br />
+USA_FlatRobBirthday kihagyva (100%), <br />
+USA_WestDesMoinesPacMan, not updated, 0.0<br />
+USA_CRFeather kihagyva (100%), <br />
+USA_BlackCat kihagyva (100%), <br />
+USA_CRJonesParkBirthday7 kihagyva (100%), <br />
+USA_NoelridgeMystery kihagyva (100%), <br />
+USA_WestDesMoinesStrawberry, not updated, 0.0<br />
+USA_WestDesMoinesShark, not updated, 0.0<br />
+USA_AltoonaEvos, not updated, 0.0<br />
+USA_DSMHalloweenWitch, not updated, 0.0<br />
+USA_CRFrankenstein, not updated, 0.0<br />
+USA_ThomasParkFlats kihagyva (100%), <br />
+USA_IowaGoldfinch kihagyva (100%), <br />
+USA_Minion kihagyva (100%), <br />
+USA_FarmingtonTiger, not updated, 0.0<br />
+USA_CedarRapidsPumpkin kihagyva (100%), <br />
+USA_PuppyPlayPen, not updated, 0.0<br />
+USA_Burger kihagyva (100%), <br />
+USA_Pizza kihagyva (100%), <br />
+USA_StormtrooperSavage kihagyva (100%), <br />
+USA_Snoopy kihagyva (100%), <br />
+USA_JordanJ kihagyva (100%), <br />
+USA_Tulip kihagyva (100%), <br />
+USA_MOAMNCrossbow kihagyva (100%), <br />
+USA_MinnesotaM kihagyva (100%), <br />
+USA_HiawathaCrossbows kihagyva (100%), <br />
+USA_SuperBowlLII kihagyva (100%), <br />
+USA_EaglesVPatriots kihagyva (100%), <br />
+USA_StMarysBattlegroundWeapon kihagyva (100%), <br />
+USA_LRTSnowflake kihagyva (100%), <br />
+USA_HeartCrossbows kihagyva (100%), <br />
+USA_ComoParkShamrockWhite kihagyva (100%), <br />
+USA_ComoParkShamrockBlue, not updated, 0.0<br />
+USA_StPaulShamrock kihagyva (100%), <br />
+USA_BirthdayClown kihagyva (100%), <br />
+USA_LongLakeButterflies kihagyva (100%), <br />
+USA_FleurDeLis, not updated, 0.0<br />
+USA_HutchinsonSnowflake kihagyva (100%), <br />
+USA_RochestersCornWaterTower, not updated, 0.0<br />
+USA_DuluthAnchor kihagyva (100%), <br />
+USA_SunFlake, not updated, 0.0<br />
+USA_PrescottCardinals, not updated, 0.0<br />
+Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
+Denmark_AnimalFarmHilleroed, <b>updated</b>, 141, <a href="https://www.munzee.com/map/u3by0wys4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_AnimalFarmHilleroed.json" target="_blank">json</a><br />
