--- a/feladat.html
+++ b/feladat.html
@@ -595,3 +595,4 @@ USA_PrescottCardinals, not updated, 0.0<br />
 Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
 Denmark_AnimalFarmHilleroed, <b>updated</b>, 141, <a href="https://www.munzee.com/map/u3by0wys4/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_AnimalFarmHilleroed.json" target="_blank">json</a><br />
 Denmark_EvolutionparkInRoskilde, <b>updated</b>, 429, <a href="https://www.munzee.com/map/u3bse1cwp/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_EvolutionparkInRoskilde.json" target="_blank">json</a><br />
+Denmark_ChristmastreeInHilleroed, <b>updated</b>, 193, <a href="https://www.munzee.com/map/u3bwpz4em/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_ChristmastreeInHilleroed.json" target="_blank">json</a> <b>100%</b><br />
