--- a/feladat.html
+++ b/feladat.html
@@ -599,3 +599,4 @@ Denmark_ChristmastreeInHilleroed, <b>updated</b>, 193, <a href="https://www.munz
 Denmark_Drikkehorn, <b>updated</b>, 165, <a href="https://www.munzee.com/map/u3b6kzwtk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_Drikkehorn.json" target="_blank">json</a> <b>100%</b><br />
 Denmark_FCMidtjylland, <b>updated</b>, 719, <a href="https://www.munzee.com/map/u1yr5xe7p/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_FCMidtjylland.json" target="_blank">json</a><br />
 Denmark_RandersRegnskov, <b>updated</b>, 858, <a href="https://www.munzee.com/map/u4p1hxjdu/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_RandersRegnskov.json" target="_blank">json</a><br />
+Denmark_RandersSnowy, <b>updated</b>, 167, <a href="https://www.munzee.com/map/u4p1j0qg2/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_RandersSnowy.json" target="_blank">json</a><br />
