--- a/feladat.html
+++ b/feladat.html
@@ -601,3 +601,4 @@ Denmark_FCMidtjylland, <b>updated</b>, 719, <a href="https://www.munzee.com/map/
 Denmark_RandersRegnskov, <b>updated</b>, 858, <a href="https://www.munzee.com/map/u4p1hxjdu/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_RandersRegnskov.json" target="_blank">json</a><br />
 Denmark_RandersSnowy, <b>updated</b>, 167, <a href="https://www.munzee.com/map/u4p1j0qg2/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_RandersSnowy.json" target="_blank">json</a><br />
 Denmark_SonicRanders, <b>updated</b>, 174, <a href="https://www.munzee.com/map/u4p1kkb66/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SonicRanders.json" target="_blank">json</a><br />
+Denmark_FlatHammel, <b>updated</b>, 190, <a href="https://www.munzee.com/map/u4p003mrr/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_FlatHammel.json" target="_blank">json</a> <b>100%</b><br />
